# spetlr-lakehouse-template

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements-deploy.txt  requirements-test.txt  requirements.txt  setup.cfg
.dbx/: project.json
.github/application/: build.ps1  check.ps1  deploy.ps1  local.ps1  test.ps1  unittest.ps1
.github/deploy/: connect_DB_api.ps1  deploy_resources.ps1  setup_deploying_SPN.ps1
.github/deploy-bicep/: main.bicep  resources-lakehouse.bicep  rg-lakehouse.bicep
.github/deploy/steps/: 00-Verify-Arguments.ps1  10-Config.ps1  20-deploy-bicep.ps1  21-add-data-to-storage-acc.ps1  25-ensure-keyvault-access.ps1  35-Provision-Service-Principal.ps1  50-Initialize-Databricks.ps1  55-Databricks-Instance-Pool.ps1  90-Databricks-Secrets.ps1
.github/workflows/: application-deployment-pipeline.yml  databricks-deployment-template.yml  databricks-deployment.yml  databricks-test-template.yml  deploy-environment.yml  pr-pipeline.yml  resource-deployment.yml  template-deploy-application.yml  template-deploy-environment.yml  template-test-applicaiton.yml  template-unittest.yml  test-deployment.yml
.github/workflows/templates/: deploy-application.yml  deploy-environment.yml  test-applicaiton.yml
data/: taxi_dataset_extract.py
demo/: .gitignore  dev_requirements.txt  setup.py
demo/deploy/: build.ps1  deploy.integration_tests.ps1  deploy.ps1
deploy/: build.ps1  deploy.integration_tests.ps1  deploy.ps1
deploy/Utilities/: Get-DatabricksInstancePool.ps1  New-DatabricksCluster.ps1  New-DatabricksRun.ps1  Throw-WhenError.ps1  Wait-DatabricksRun.ps1
deploy/conf/: cluster113.json
src/dataplatform/: __init__.py
src/dataplatform/environment/: __init__.py  (+2 more)
src/jobs/: all.yml  all.yml.j2  build.yml  cluster.json  cluster_env.json  clusters.yml  sparkconf.json.j2  workflows.yml
test/cluster/: test_requirements.txt
test/local/: dummy_test.py  test_demo.py
tools/: set_lib_env.ps1
(+57 files in other folders)
