[metadata]
name = data-platform-demo
version = 1.0.0
description = SPETLR Lakehouse Demo


[options]
python_requires = >=3.9
install_requires = 
    spetlr
    azureml


[options.package_data]
* = *.json, *.sql, *.yaml, *.yml

package_dir=
    =src
packages = find:


[options.packages.find]
where = src

    
[options.entry_points]
console_scripts = 
    dp_cli = dataplatform.environment.init_configurator:cli
